Build form with styles and logic for sending function

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register student</title>
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
     <main>
-        <div id="form-container" class="container">
+        <div id="form-container" class="form-container">
 
         </div>
     </main>
